--- a/index.html
+++ b/index.html
@@ -6,20 +6,12 @@ layout: default
 ---
 
 <ul>
-  {% assign snapshots = site.static_files | where: "snapshot", true %}
-  {% assign sorted_snapshots = snapshots | sort: "mtime" %}
-  {% for page in sorted_snapshots %}
-  {% assign title = site.data.snapshot_titles[page.name] %}
+  {% assign sorted_snapshot_filenames = site.data.sorted_snapshot_dates %} {%
+  for filename in sorted_snapshot_filenames %} {% assign page =
+  site.static_files | where: "path", filename | first %} {% assign title =
+  site.data.snapshot_titles[filename] %}
   <li>
-    <a href="{{ page.path }}">{{ title }}</a> - Modified Time: {{ page.mtime | date: '%Y-%m-%d' }}
-    <ul>
-      {% for attribute in page %}
-      <li>{{ attribute[0] }}: {{ attribute[1] }}</li>
-      {% endfor %}
-    </ul>
+    <a href="{{ page.path }}">{{ title }}</a>
   </li>
   {% endfor %}
-</ul>
-    </ul>
-  </li>
 </ul>
