--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 {% assign sorted_snapshot_dates = site.data.sorted_snapshot_dates %}
 <div class="mx-auto max-w-4xl mt-10">
   <p class="text-gray-600 text-base mt-4">
-    Welcome to our perma-web store, a dedicated space for preserving source
+    Welcome to my perma-web store, a dedicated space for preserving source
     material against the risk of online disappearance. Each page within our
     archive includes a link back to the original source. We encourage visitors
     to use these original links whenever possible, ensuring the original content
@@ -28,22 +28,33 @@ layout: default
       >this piece</a
     >.
   </p>
-
+  <p class="text-gray-600 text-base mt-4">
+    The source for this website can be found on
+    <a
+      href="https://github.com/vertis/permanent-web-snapshots"
+      class="text-blue-500 hover:text-blue-700"
+      >GitHub</a
+    >. It's worth noting that you shouldn't fork, but rather create an
+    unconnected repo if you want to reuse this.
+  </p>
   {% for x in sorted_snapshot_dates %}
 
-  <h2 class="text-xl font-bold">{{ x[0] }}</h2>
-  <ul class="list-disc pl-5">
-    {% for filename in x[1] %} {% assign p = site.static_files | where: "path",
-    filename | first %} {% assign title = site.data.snapshot_titles[filename] %}
-    <li class="mt-2">
-      <a
-        href="/snapshots/{{filename}}"
-        class="text-blue-500 hover:text-blue-700"
-        >{{ title }}</a
-      >
-    </li>
-    {% endfor %}
-  </ul>
+  <div class="mt-8">
+    <h2 class="text-xl font-bold">{{ x[0] }}</h2>
+    <ul class="list-disc pl-5 mt-4">
+      {% for filename in x[1] %} {% assign p = site.static_files | where:
+      "path", filename | first %} {% assign title =
+      site.data.snapshot_titles[filename] %}
+      <li class="mt-2">
+        <a
+          href="/snapshots/{{filename}}"
+          class="text-blue-500 hover:text-blue-700"
+          >{{ title }}</a
+        >
+      </li>
+      {% endfor %}
+    </ul>
 
-  {% endfor %}
+    {% endfor %}
+  </div>
 </div>
