--- a/index.html
+++ b/index.html
@@ -44,13 +44,17 @@ layout: default
     <ul class="list-disc pl-5 mt-4">
       {% for filename in x[1] %} {% assign p = site.static_files | where:
       "path", filename | first %} {% assign title =
-      site.data.snapshot_titles[filename] %}
+      site.data.snapshot_titles[filename] %} {% assign source =
+      site.data.snapshot_sources[filename] %}
       <li class="mt-2">
         <a
           href="/snapshots/{{filename}}"
           class="text-blue-500 hover:text-blue-700"
           >{{ title }}</a
         >
+        (<a href="{{ source }}" class="text-blue-500 hover:text-blue-700"
+          >original</a
+        >)
       </li>
       {% endfor %}
     </ul>
