--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@ layout: default
       <li class="mt-2">
         <a
           href="/snapshots/{{filename}}"
-          class="text-blue-500 hover:text-blue-700"
+          class="text-blue-500 hover:text-blue-700 visited:text-purple-600"
           >{{ title }}</a
         >
-        (<a href="{{ source }}" class="text-blue-500 hover:text-blue-700"
+        (<a
+          href="{{ source }}"
+          class="text-blue-500 hover:text-blue-700 visited:text-purple-600"
           >original</a
         >)
       </li>
